fix: add missing gap to Button component

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -10,6 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 0.5rem;
     padding: 1rem 4rem;
 
     background-color: $bg-color;
